// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP Cloud Run 1`] = `
Array [
  Object {
    "message": "hello",
    "severity": "WARNING",
    "time": "2009-02-13T23:31:30.000Z",
  },
]
`;

exports[`GCP Cloud Run Error Object 1`] = `
Array [
  Object {
    "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
    "message": "Ded 1",
    "severity": "ERROR",
    "stack_trace": "Error: Ded 1
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:15:22)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/npm/node_modules/jest-circus/build/utils.js:391:28)
    at new Promise (<anonymous>)",
    "time": "2009-02-13T23:31:30.000Z",
  },
]
`;

exports[`GCP Cloud Run Fatal with Error Object 1`] = `
Array [
  Object {
    "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
    "message": "Ded 2",
    "severity": "CRITICAL",
    "stack_trace": "Error: Ded 2
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:22:22)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/npm/node_modules/jest-circus/build/utils.js:391:28)
    at new Promise (<anonymous>)",
    "time": "2009-02-13T23:31:30.000Z",
  },
]
`;
